# DesktopIconToggleLite

./: DesktopIconToggleLite.csproj  Program.cs  README.md  SUGGESTIONS.md  pyproject.toml
desktop_icon_toggle_lite/: __init__.py  __main__.py  app.py  config.py  hotkey.py  logging.py  winapi.py
